--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "moment": "^2.29.1",
+    "netlify": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-countup": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -38,7 +40,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-      
     ]
   }
 }
